--- a/src/css/globalstyle/global.css
+++ b/src/css/globalstyle/global.css
@@ -25,8 +25,11 @@ html{
     scroll-behavior: smooth;
 }
 
-/* Color Icons */
+strong a{
+    color: var(--color-linghtRed);
+}
 
+/* Color Icons */
 .fa-facebook-f{
     color: #4267B2;
 }
