--- a/src/css/mainstyle/main.css
+++ b/src/css/mainstyle/main.css
@@ -7,6 +7,7 @@
 }
 
 .advertorial strong{
+    display: block;
     text-transform: uppercase;
     font-family: var(--font-primary);
     font-weight: 400;
