--- a/src/css/mainstyle/main.css
+++ b/src/css/mainstyle/main.css
@@ -18,6 +18,7 @@
 
 .page_main .main_news{
     margin: 3rem 0;
+    margin-bottom: 8rem;
     padding: 0 1rem;
     display: grid;
     grid-template-areas: "feed_news_main Latest_news";
