--- a/src/css/responsive/responsivo.css
+++ b/src/css/responsive/responsivo.css
@@ -18,6 +18,28 @@
         margin: 7rem 0;
     }
 
+    .page_main .main_news .feed_news_main .box_introduction_page .image_and_text a .image_testimonyOne,
+    .page_main .main_news .feed_news_main .box_introduction_page .image_and_text a .image_testimonyTwo,
+    .page_main .main_news .feed_news_main .test_gota_himalaia a .gota_himalaia_test,
+    .page_main .main_news .feed_news_main .use_and_result .about_composition .image_composition,
+    .page_main .main_news .feed_news_main .box_about_treatment a .Gota_himalaia_treatment img{
+        width: 100%;
+    }
+
+    .page_main .main_news .feed_news_main .box_about_treatment a .Gota_himalaia_treatment img {
+        margin: 0;
+    }
+
+    .Latest_news  .image_post{
+        width: 100%;
+        height: 60.5rem;
+    }
+
+    .Latest_news  .image_post img{
+        height: 100%;
+        object-fit: contain;
+    }
+
     .container_footer .max-width .box_copy{
         padding: 0 3rem 3rem 3rem;
     }
@@ -56,37 +78,20 @@
     .page_main .main_news .feed_news_main .box_comments .comments .closed_comment{
         width: 100%;
     }
+
+    .container_footer .max-width .box_copy .text_copy .box_company{
+        max-width: 100%;
+    }
 }
 
 @media (max-width:425px){
     .page_main .main_news{
+        margin: 3rem 0;
         margin-bottom: -1rem;
     }
 
     .page_main .main_news .feed_news_main .box_introduction_page .network_and_update{
         flex-wrap: wrap;
-    }
-
-    .page_main .main_news .feed_news_main .box_introduction_page .image_and_text a .image_testimonyOne,
-    .page_main .main_news .feed_news_main .box_introduction_page .image_and_text a .image_testimonyTwo,
-    .page_main .main_news .feed_news_main .test_gota_himalaia a .gota_himalaia_test,
-    .page_main .main_news .feed_news_main .use_and_result .about_composition .image_composition,
-    .page_main .main_news .feed_news_main .box_about_treatment a .Gota_himalaia_treatment img{
-        width: 100%;
-    }
-
-    .page_main .main_news .feed_news_main .box_about_treatment a .Gota_himalaia_treatment img {
-        margin: 0;
-    }
-
-    .Latest_news  .image_post{
-        width: 100%;
-        height: 60.5rem;
-    }
-
-    .Latest_news  .image_post img{
-        height: 100%;
-        object-fit: contain;
     }
 }
 
