Ajustes no Footer do projeto

--- a/src/css/footer/footer.css
+++ b/src/css/footer/footer.css
@@ -52,6 +52,7 @@
 .container_footer .max-width .box_copy .box_copy_right ul{
     display: flex;
     align-items: center;
+    flex-wrap: wrap;
     justify-content: space-between;
 }
 
